--- a/src/styles.css
+++ b/src/styles.css
@@ -249,11 +249,6 @@ font-size: 1.25em;
   text-overflow: ellipsis;
 }
 
-
-
-
-
-
 /****************************************************
                   Event Sidebar Styling
  ****************************************************/
@@ -371,21 +366,17 @@ border-bottom: 2px solid #AAC7D8;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-
-
 #notification-options h3 {
   font-size: 1.2em;
   color: #44576D; /* Navy */
   margin-bottom: 10px;
 }
-
 #notification-options label {
   display: block;
   margin-top: 10px;
   font-weight: bold;
   color: #44576D;
 }
-
 #notification-options select,
 #notification-options input[type="number"] {
   width: calc(100% - 20px);
@@ -398,7 +389,6 @@ border-bottom: 2px solid #AAC7D8;
 #notification-toggle {
   margin-top: 20px;
 }
-
 #notification-options {
   margin-top: 10px;
   padding: 10px;
@@ -445,6 +435,8 @@ border-bottom: 2px solid #AAC7D8;
   border-radius: 8px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
 }
 .modal-content p {
   margin-bottom: 20px;
@@ -458,6 +450,7 @@ border-bottom: 2px solid #AAC7D8;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
+  margin: 10px;
 }
 .modal-content button:hover {
   background-color: #29353C; /* Darker shade */
@@ -486,6 +479,7 @@ border-bottom: 2px solid #AAC7D8;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   z-index: 1000; /* Ensure it's above other elements */
 }
+
 /* Hover and Active States */
 .fab:hover {
   transform: scale(1.1); /* Slightly enlarge on hover */
@@ -497,9 +491,19 @@ border-bottom: 2px solid #AAC7D8;
 
 
 
+/* Align container contents to the right */
+#auth-controls {
+  text-align: left; /* Align contents to the right */
+}
 
-
-
+/* Style the user name */
+#user-name {
+  font-weight: bold;
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 5px; /* Add spacing between name and button */
+  display: block; /* Ensure it appears on its own line */
+}
 
 
 
