--- a/src/styles.css
+++ b/src/styles.css
@@ -3,40 +3,64 @@
                   Header Styling
  ****************************************************/
 .header {
+  position: fixed;
+  height: 60px;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  background-color: #e6e6e6;
-  border-bottom: 1px solid #ccc;
-  position: relative; /* Allow the title to be absolutely positioned */
+  background-color: #ffffff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  padding: 5px 10px;
+  z-index: 1000;
+  box-sizing: border-box;
 }
 .header-left,
-.header-right {
+.header-right,
+.header-center {
+  flex: 1;
   display: flex;
   align-items: center;
 }
 .header-center {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   text-align: center;
-}
-.header-center .logo {
-  font-size: 32px;
-  font-weight: bold;
+  justify-content: center;
   color: #44576D;
-  margin: 0;
 }
-
+.header-left {
+  justify-content: flex-start;
+}
+.header-right {
+  justify-content: flex-end;
+  text-align: right;
+}
+/* Header Center Logo */
+.logo-link {
+  text-decoration: none; /* Remove underline */
+  background-color: transparent;
+}
+.logo {
+  color: #44576D; /* Starting color: muted navy */
+  font-size: 24px;
+  font-weight: bold;
+  transition: color 0.3s ease; /* Smooth color change */
+  background-color: transparent;
+}
+.logo:hover {
+  color: #002855; /* Hover color: deep navy */
+  background-color: transparent;;
+  cursor: pointer; /* Indicate it's clickable */
+}
 body {
+    padding: 70px 0 0 0;
     background-color: #e6e6e6; /* Light gray */
     background-image: linear-gradient(135deg, #E6E6E6 50%, #DFEBF6 100%);
     margin: 0;
-    padding: 0;
     font-family: 'Roboto', sans-serif;
-  }
-
+    height: calc(100vh - 70px);
+}
 /****************************************************
                   Main Button Styling
  ****************************************************/
@@ -106,6 +130,7 @@ button:focus {
 .notification-bell img {
   width: 24px;
   height: 24px;
+  margin: 0;
 }
 .notification-bell {
   position: relative;
@@ -234,20 +259,20 @@ button:focus {
 }
 .fc-daygrid-day-number {
   color:#29353C;
-  font-size: 1.1em; /* Larger day number */
+  font-size: 18px;
   font-weight: bold; /* Bold text for emphasis */
 }
 .fc-daygrid-day.fc-day-sat,
 .fc-daygrid-day.fc-day-sun {
   background-color: rgba(170, 199, 216, 0.2); /* Slightly shaded weekends */
 }
+.fc-day-today{
+  background-color: rgba(170, 199, 216, 0.6) !important; /* Light blue background */
+  padding: 5px;
+}
 .fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
   font-size: 18px; /* Slightly larger for emphasis */
   color: #44576D; /* Navy text */
-  background-color: #AAC7D8; /* Light blue background */
-  border-radius: 50%; /* Circular highlight */
-  padding: 5px;
-  display: inline-block; /* Ensures the circular shape works */
 }
 /****************************************************
                   Calendar Toolbar Button Styling
@@ -278,7 +303,7 @@ font-size: 1.25em;
   height: 40px;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
 }
 /****************************************************
@@ -595,13 +620,3 @@ a:visited {
   float: right;
 }
 
-
-
-
-
-/****************************************************
-                  Wish List
-****************************************************/
-/*
-1. Get rid of dot on events in calendar
-*/
