--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,7 @@ a:visited {
 
 .todo-list > p{
     display:list-item;
-    margin-left: 5%;
+    margin-left: 60px;
 }
  .todo-add{
     background-color: rgb(49, 96, 112);
