--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,7 @@ a:visited {
 
 #practice-button {
     float: right;
+    width: 250px;
 }
 
 
@@ -59,13 +60,14 @@ a:visited {
     margin-bottom: 25px;
 }
 
-.flashcards-option, .generate-quiz-button {
+.generate-quiz-button {
     background-color: lightgray;
     font-size: 25px;
-    width: 175px;
+    width: 200px;
     height: 40px;
     text-align: center;
     border-radius: 10px;
+    border: none;
 }
 
 #quiz-topic-textbox {
@@ -79,151 +81,6 @@ a:visited {
 
 ::placeholder {
     text-align: center;
-}
-
-/*Styling for flashcards*/
-.flashcard-section {
-    display: none;
-    animation: fadeIn 0.3s;
-}
-
-.flashcard-position {
-    display: flex;
-    justify-content: center;
-}
-
-.flashcard {
-    background-color: lightgray;
-    height: 350px;
-    width: 650px;
-    border-radius: 40px;
-    padding: 15px;
-    font-size: 35px;
-}
-
-.flashcard-flip-clickbox {
-    position: absolute;
-    width: 550px;
-    height: 375px;
-    top: 185px;
-    left: 685px;
-}
-
-#flashcard-front-text {
-    text-align: center;
-}
-
-#flashcard-number {
-    text-align: center;
-    font-size: 25px;
-}
-
-#flashcard-middle {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 100px;
-}
-
-button {
-    border: none;
-}
-
-#flashcard-middle > button {
-    height: 50px;
-    width: 50px;
-    border-radius: 50px;
-    font-size: 40px;
-    background-color: darkgray;
-}
-
-#flashcard-middle > button:hover {
-    background-color: gray;
-}
-
-.shuffle-flashcards-button-position {
-    display: flex;
-    justify-content: center;
-    margin-top: 25px;
-}
-
-.shuffle-flashcards-button {
-    background-color: lightgray;
-    font-size: 25px;
-    width: 125px;
-    height: 45px;
-    border-radius: 10px;
-}
-
-.shuffle-flashcards-button {
-    background-color: lightgray;
-    font-size: 25px;
-    width: 125px;
-    height: 45px;
-    border-radius: 10px;
-}
-
-/*Edit flash cards menu styling*/
-.edit-button-position {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-}
-
-.edit-flashcards-button {
-    background-color: lightgray;
-    font-size: 25px;
-    width: 200px;
-    height: 45px;
-    border-radius: 10px;
-}
-
-.edit-flashcards-menu-position {
-    display: flex;
-    justify-content: center;
-}
-
-.edit-flashcards-menu {
-    background-color: lightgray;
-    width: 800px;
-    height: 1050px;
-    border-radius: 15px;
-    display: flex;
-    justify-content: space-evenly;
-    font-size: 30px;
-    margin-top: 50px;
-    display: none;
-    
-}
-
-.edit-front, .edit-back {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.edit-front > input, .edit-back > input {
-    border: none;
-    margin-top: 55px;
-    width: 300px;
-    height: 35px;
-    border-radius: 5px;
-}
-
-#done-edit-button {
-    background-color: lightgreen;
-    font-size: 25px;
-    width: 100px;
-    height: 35px;
-    border-radius: 10px;
-    position: absolute;
-    left: 900px;
-    top: 1745px;
-    display: none;
-}
-
-#done-edit-button:hover {
-    background-color: green;
 }
 
 /*Styling for quiz*/
@@ -297,6 +154,7 @@ button {
     margin-top: 40px;
     margin-bottom: 50px;
     display: none;
+    border: none;
 }
 
 .quiz-submit-button:hover {
@@ -358,16 +216,6 @@ button {
 
     to {
         opacity: 1;
-    }
-}
-
-@keyframes fadeOut {
-    from { 
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
     }
 }
 
