--- a/src/styles.css
+++ b/src/styles.css
@@ -21,13 +21,14 @@ a {
 }
 
 .nav-button {
-  background-color: lightgray;
+  background-color: #44576D;
   font-size: 25px;
   text-align: center;
   width: 155px;
   height: 45px;
   border: none;
   border-radius: 10px;
+  color:white;
 }
 
 a:hover {
@@ -50,13 +51,15 @@ a:visited {
 /*styling for homepage elements*/
 /* todolist elements */
 .todo-list {
-  background-color: lightblue;
+  background-color: #44576D;
   width: 25%;
   height: 60%;
   position: absolute;
-  overflow: hidden;
+  overflow-y: scroll;
   top: 20%;
   left: 0%;
+  border-radius: 30px;
+  color: white;
 }
 .todo-list > h1 {
   text-align: center;
@@ -65,15 +68,14 @@ a:visited {
 .todo-list > p {
   display: list-item;
   margin-left: 60px;
+  font-size: 24px;
 }
 .todo-add {
-  background-color: rgb(49, 96, 112);
-  width: 50%;
-  position: absolute;
+  position: relative;
   text-align: center;
-  overflow: hidden;
   bottom: 0%;
-  right: 0%;
+  right: 30px;
+  float:right;
 }
 .todo-remove-button {
   background-color: brown;
@@ -89,11 +91,17 @@ a:visited {
 .todo-input-box {
   position: relative;
   float: left;
+  border-radius: 15px;
+  font-size: 24px;
 }
 .todo-list-done {
   text-align: center;
   position: relative;
   float: left;
+  background-color: #29353c;
+  color:white;
+  border-radius: 15px;
+  font-size: 24px;
 }
 /* todolist elements end */
 .timer {
@@ -106,19 +114,21 @@ a:visited {
 }
 .chatbot {
   background-color: rgb(89, 89, 95);
-  width: 25%;
+  width: 40%;
   height: 40%;
-  position: absolute;
-  right: 0;
-  bottom: 0;
+  position:absolute;
+  bottom:0;
+  margin-inline: auto;
+  left:0;
+  right:0;
 }
 .gif {
   background-color: rgb(89, 89, 95);
   width: 20%;
   height: 20%;
   position: absolute;
-  right: 40%;
-  bottom: 30%;
+  right: 0;
+  bottom: 0;;
 }
 
 /*Styling for options*/
