--- a/src/styles.css
+++ b/src/styles.css
@@ -80,7 +80,9 @@ button {
   border-radius: 6px; /* Rounded corners */
   padding: 6px 12px;
   font-size: 14px;
-  transition: background-color 0.2s, box-shadow 0.2s;
+  transition:
+    background-color 0.2s,
+    box-shadow 0.2s;
 }
 button:hover {
   background-color: #aac7d8; /* Light blue hover */
@@ -105,7 +107,9 @@ button:focus {
   font-size: 14px;
   font-weight: bold;
   cursor: pointer;
-  transition: box-shadow 0.2s ease, transform 0.2s ease;
+  transition:
+    box-shadow 0.2s ease,
+    transform 0.2s ease;
 }
 .google-button:hover {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -306,7 +310,9 @@ button:focus {
   border-radius: 6px; /* Rounded corners */
   padding: 6px 12px;
   font-size: 14px;
-  transition: background-color 0.2s, box-shadow 0.2s;
+  transition:
+    background-color 0.2s,
+    box-shadow 0.2s;
 }
 .fc-toolbar .fc-button:hover {
   background-color: #aac7d8; /* Light blue hover */
@@ -340,7 +346,9 @@ button:focus {
   border-radius: 4px;
   border: 1px solid transparent;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow */
-  transition: transform 0.2 ease, box-shadow 0.2 ease;
+  transition:
+    transform 0.2 ease,
+    box-shadow 0.2 ease;
 }
 .fc-event-dot {
   display: none; /* Hide the default dot */
@@ -394,7 +402,9 @@ button:focus {
   padding: 10px;
   font-size: 1em;
   margin-top: 10px;
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
 }
 .event-sidebar button:hover {
   background-color: #aac7d8; /* Navy */
@@ -448,7 +458,9 @@ button:focus {
   border: 1px solid #aac7d8; /* Light blue border */
   border-radius: 8px;
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: border-color 0.3s, box-shadow 0.3s;
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
 }
 .event-sidebar input:focus {
   border-color: #44576d; /* Navy */
@@ -584,7 +596,9 @@ button:focus {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease;
   z-index: 1000; /* Ensure it's above other elements */
 }
 
@@ -655,7 +669,9 @@ button:focus {
   cursor: pointer;
   text-align: center;
   background-color: #44576d;
-  transition: transform 0.5s ease, background-color 0.2s ease-in-out;
+  transition:
+    transform 0.5s ease,
+    background-color 0.2s ease-in-out;
 }
 .tab:hover {
   background-color: #aac7d8;
@@ -758,14 +774,14 @@ a {
   text-decoration: none;
 }
 .nav-button {
-  background-color: #44576D;
+  background-color: #44576d;
   font-size: 25px;
   text-align: center;
   width: 155px;
   height: 45px;
   border: none;
   border-radius: 10px;
-  color:white;
+  color: white;
 }
 a:hover {
   background-color: rgb(180, 180, 180);
@@ -790,7 +806,7 @@ html {
 /*styling for homepage elements*/
 /* todolist elements */
 .todo-list {
-  background-color: #44576D;
+  background-color: #44576d;
   width: 25%;
   height: 60%;
   position: absolute;
@@ -798,7 +814,7 @@ html {
   top: 20%;
   left: 0%;
   border-radius: 30px;
-  color: #E6E6E6;
+  color: #e6e6e6;
 }
 .todo-list > h1 {
   text-align: center;
@@ -814,7 +830,7 @@ html {
   text-align: center;
   bottom: 0%;
   right: 30px;
-  float:right;
+  float: right;
 }
 .todo-remove-button {
   background-color: rgb(163, 16, 16);
@@ -838,7 +854,7 @@ html {
   position: relative;
   float: left;
   background-color: rgba(255, 255, 255, 0.9);
-  color:black;
+  color: black;
   border-radius: 15px;
   font-size: 24px;
 }
@@ -853,55 +869,54 @@ html {
 }
 /*chatbot elements start*/
 .chatbot {
-
-  background-color: #44576D;
+  background-color: #44576d;
   width: 40%;
   height: 40%;
-  position:absolute;
-  bottom:0;
+  position: absolute;
+  bottom: 0;
   margin-inline: auto;
-  left:0;
-  right:0;
+  left: 0;
+  right: 0;
   text-align: center;
   font-size: 20px;
   border-radius: 20px;
-  color:#E6E6E6;
+  color: #e6e6e6;
 }
-.chatbot-input{
-  background-color: #29353C;
+.chatbot-input {
+  background-color: #29353c;
   width: 90%;
-  position:absolute;
+  position: absolute;
   padding: 5px;
   margin-inline: auto;
-  left:0;
-  right:0;
-  bottom:0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   text-align: center;
-  font-size:15px;
+  font-size: 15px;
   border-radius: 15px;
-  color:#E6E6E6;
+  color: #e6e6e6;
 }
-.response-box{
-  background-color: #DFEBF6;
+.response-box {
+  background-color: #dfebf6;
   color: black;
   width: 90%;
   height: 35%;
-  margin:auto;
+  margin: auto;
   overflow-y: scroll;
   border-radius: 15px;
   font-size: 24px;
   text-align: left;
 }
-.chatbot-input-box{
-  position: relative; 
+.chatbot-input-box {
+  position: relative;
   border-radius: 15px;
   font-size: 24px;
 }
-.chatbot-enter{
+.chatbot-enter {
   text-align: center;
   position: relative;
   background-color: rgba(255, 255, 255, 0.9);
-  color:black;
+  color: black;
   border-radius: 15px;
   font-size: 24px;
 }
@@ -1076,16 +1091,16 @@ tr {
   margin-top: 150px;
   position: absolute;
   margin-left: 925px;
+  flex-direction: column;
+  text-align: center;
 }
 
 .loader {
-  border: 10px solid rgb(235, 235, 235);
-  border-radius: 50%;
-  border-top: 10px solid lightblue;
-  width: 75px;
-  height: 75px;
-  animation: spin 2s linear infinite;
   display: none;
+}
+
+#duck-gif {
+  border-radius: 100px;
 }
 
 /*For styling the error message*/
