made it so that when not all questions have been answered, quiz cannot be submitted and an error message displays

--- a/src/styles.css
+++ b/src/styles.css
@@ -1112,6 +1112,10 @@ tr {
   display: none;
 }
 
+#question-not-answered {
+  display: none;
+}
+
 .error-msg-position {
   display: flex;
   justify-content: center;
