added error message for when the quiz has already been submitted and changed submission button disabled logic

--- a/src/styles.css
+++ b/src/styles.css
@@ -1116,6 +1116,10 @@ tr {
   display: none;
 }
 
+#quiz-already-submitted {
+  display: none;
+}
+
 .error-msg-position {
   display: flex;
   justify-content: center;
